# model_inference

./: .gitignore  README.md  pyproject.toml  stage_0.txt  stage_1.txt  stage_2.txt  stage_3.txt  stage_4.txt
configs/: default_engine.json  tiny_model.json
examples/: basic_generate.py  multi_generate.py  real_model_inference.py  tiny_generate.py
my_llm_engine/: __init__.py  config.py  logging_utils.py  tensor_types.py
my_llm_engine/engine/: __init__.py  block_manager.py  engine.py  generation.py  kv_cache.py  paged_kv_cache.py  profiler.py  request.py  scheduler.py
my_llm_engine/models/: __init__.py  attention.py  layers.py  rope.py  transformer.py  weight_loader.py
tests/: test_engine_scheduler.py  test_kv_cache.py  test_paged_kv.py  test_tiny_model.py
